--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
   thymeleaf:
     cache: false
 
+
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
@@ -25,6 +26,8 @@ spring:
     password: 65d4417d036064c7
     protocol: smtps
     properties.mail.smtp.ssl.enable: true
+  jackson:
+    time-zone: GMT+8
 
 
 mybatis:
