--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,14 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+<!--			<version>2.2.7.RELEASE</version>-->
+		</dependency>
+
+
+
 
 
 
