--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,11 @@
 <!--			<version>2.2.7.RELEASE</version>-->
 		</dependency>
 
-
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+			<version>2.3.3.RELEASE</version>
+		</dependency>
 
 
 
