--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,14 @@ spring:
       enable-auto-commit: true
       auto-commit-interval: 3000
 
+  # ElasticsearchProperties
+  data:
+    elasticsearch:
+#      cluster-name: lqy
+#      cluster-nodes: 127.0.0.1:9300
+
+
+
 
 
 
